backend-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-database-service
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
