backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: sample-web-app-backend
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
  type: ClusterIP
