frontend-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-backend-service
spec:
  selector:
    app: sample-web-app-backend
  ports:
    - protocol: TCP
      port: 82
      targetPort: 81
