nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: ec2-54-89-234-198.compute-1.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sample-web-app-frontend
            port:
              number: 80
